# any-miotts

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/any-miotts/: Cargo.toml
crates/any-miotts/src/: lib.rs
crates/candle-backend/: Cargo.toml
crates/candle-backend/src/: backend.rs  discovery.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  device.rs  engine.rs  error.rs  lib.rs  sampling.rs  scheduler.rs  sentence.rs  speaker_cache.rs
crates/coreml-backend/: Cargo.toml
crates/coreml-backend/src/: backend.rs  discovery.rs  lib.rs  loader.rs
crates/llamacpp-backend/: Cargo.toml
crates/llamacpp-backend/src/: backend.rs  discovery.rs  lib.rs
crates/qnn-backend/: Cargo.toml
crates/qnn-backend/src/: backend.rs  discovery.rs  lib.rs  loader.rs
docs/: model_comparison.md
examples/: debug_vulkan.rs  synthesize.rs
tools/convert-coreml/: convert_miocodec.py  requirements.txt
tools/convert-tflite/: convert_miocodec.py  requirements.txt
