[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/candle-backend",
    "crates/llamacpp-backend",
    "crates/coreml-backend",
    "crates/qnn-backend",
    "crates/any-miotts",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/m96-chan/any-miotts"

[workspace.dependencies]
any-miotts-core = { path = "crates/core" }
any-miotts-candle = { path = "crates/candle-backend" }
any-miotts-llamacpp = { path = "crates/llamacpp-backend" }
any-miotts-coreml = { path = "crates/coreml-backend" }
any-miotts-qnn = { path = "crates/qnn-backend" }
candle-miotts = { git = "https://github.com/m96-chan/candle-miotts.git" }
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
safetensors = "0.5"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4", features = ["tokio"] }
hound = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
