[package]
name = "any-miotts"
version = "0.1.0"
description = "Multi-backend TTS engine with automatic device selection"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
any-miotts-core = { workspace = true }
any-miotts-candle = { workspace = true }
any-miotts-llamacpp = { workspace = true, optional = true }
any-miotts-coreml = { workspace = true, optional = true }
any-miotts-qnn = { workspace = true, optional = true }
candle-miotts = { workspace = true }
tokenizers = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hound = { workspace = true }
rodio = { version = "0.19", default-features = false, features = ["symphonia-wav"] }

[features]
default = ["candle-cpu"]
candle-cpu = ["any-miotts-candle/cpu"]
candle-cuda = ["any-miotts-candle/cuda"]
candle-metal = ["any-miotts-candle/metal"]

# llama.cpp backend (LFM2 only, GGUF quantised)
llamacpp = ["dep:any-miotts-llamacpp"]
llamacpp-opencl = ["llamacpp", "any-miotts-llamacpp/opencl"]

# CoreML backend (MioCodec only, Apple ANE)
coreml = ["dep:any-miotts-coreml"]

# QNN backend (MioCodec only, Qualcomm Hexagon NPU)
qnn = ["dep:any-miotts-qnn"]

# Platform meta-features
apple = ["candle-metal", "coreml"]
desktop-nvidia = ["candle-cuda"]
android-qualcomm = ["llamacpp-opencl", "qnn"]

[[example]]
name = "synthesize"
path = "../../examples/synthesize.rs"
