[package]
name = "any-miotts-candle"
version = "0.1.0"
description = "Candle backend (CUDA/Metal/CPU) for any-miotts"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
any-miotts-core = { workspace = true }
candle-miotts = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-miotts/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-miotts/metal"]
