[package]
name = "any-miotts-coreml"
version = "0.1.0"
description = "CoreML/ANE backend for MioCodec inference in any-miotts (Apple only)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
any-miotts-core = { workspace = true }
tracing = { workspace = true }

# CoreML bindings are only available on Apple platforms.
[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDictionary", "NSString", "NSArray", "NSError", "NSURL", "NSObject"] }
objc2-core-ml = { version = "0.3", features = ["MLModel", "MLModelConfiguration", "MLDictionaryFeatureProvider", "MLMultiArray", "MLFeatureValue", "MLFeatureDescription", "MLModelDescription"] }

[features]
default = []
